--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,15 +1,12 @@
-/* NavBar.css */
 
-/* Reset del ul de navegación */
 .nav-links {
-    list-style: none;   /* 🔸 quita los puntitos */
-    margin: 0;          /* quita sangrías del ul */
+    list-style: none;   /* quita los puntitos */
+    margin: 0;          
     padding: 0;
-    display: flex;      /* 🔸 coloca los <li> en fila */
-    gap: auto;          /* separación horizontal entre links */
+    display: flex;      
+    gap: auto;          
   }
-  
-  /* Si quieres afinar el espacio de cada li, opcional */
+
 .nav-links li {
   }
   
@@ -28,11 +25,11 @@
   
   /* Barra general */
   .navbar {
-    display: flex;            /* logo | ul | carrito */
-    align-items: center;      /* centra verticalmente */
+    display: flex;            
+    align-items: center;      
     background-color: black;
     color: white;
-    padding: 0.75rem 1.5rem;  /* algo de aire */
+    padding: 0.75rem 1.5rem;  
     text-align: center;
     
     
