productos, rutas dinámicas, más detalles,

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: center !important;
 }
 .App-logo {
   height: 40vmin;
@@ -34,4 +34,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+html, body, #root {
+  height: 100%;
+}
+
+body {
+  /* Ruta pública (carpeta public/) */
+  background-image: url("../public/Img/fondo.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;     /* que abarque todo */
+  background-attachment: fixed; /* opcional: efecto parallax sutil */
+  margin: 0;
 }
