--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,10 @@ html, body, #root {
 }
 
 body {
-  /* Ruta pública (carpeta public/) */
   background-image: url("../public/Img/fondo.jpg");
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover;     /* que abarque todo */
-  background-attachment: fixed; /* opcional: efecto parallax sutil */
+  background-size: cover;     
+  background-attachment: fixed; 
   margin: 0;
 }
